MF-215  Navigation Bar - Fix Logout menu is not clearly visible issue

--- a/src/root.styles.css
+++ b/src/root.styles.css
@@ -24,7 +24,7 @@
   justify-content: flex-end;
   width: 100%;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .userMenuCard {
